Fixing spacing between email social media buttons and hr line

--- a/style.css
+++ b/style.css
@@ -73,12 +73,12 @@ header {
 
 .email {
     text-align: center;
-    margin: 3% auto -4%;
+    margin: 1.5em auto 0;
 }
 
 .social-media {
     text-align: center;
-    margin: 5% auto 0;
+    margin: 0.6em auto -1em;
 }
 
 .social-media a {
